[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/MagicProjectile.gd" type="Script" id=1]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/MagicProjectile.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=4]
[ext_resource path="res://Enemies/MagicProjectileShape.tres" type="Shape2D" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[node name="MagicProjectile" type="AnimatedSprite"]
frames = ExtResource( 3 )
playing = true
offset = Vector2( 0.5, -16 )
script = ExtResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -15.5 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
monitoring = false
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.5, -15.5 )
shape = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="DeletionTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DeletionTimer" to="." method="_on_DeletionTimer_timeout"]

[editable path="Hitbox"]
